cluster/applications/automation/zigbee2mqtt/zigbee2mqtt.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: automation
  labels:
    app: zigbee2mqtt
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      nodeSelector:
        kubernetes.io/hostname: cyl-optiplex9020
      tolerations:
        - key: workload
          value: essential-only
          effect: NoSchedule
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:2.9.1
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: zigbee2mqtt-data
              mountPath: /app/data
            - name: zigbee-device
              mountPath: /dev/serial/by-id/usb-ITead_Sonoff_Zigbee_3.0_USB_Dongle_Plus_c42fe52d18f9ef11aeec6f135c2a50c9-if00-port0
          securityContext:
            privileged: true
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
      volumes:
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
        - name: zigbee2mqtt-config
          configMap:
            name: zigbee2mqtt-config
        - name: zigbee-device
          hostPath:
            path: /dev/serial/by-id/usb-ITead_Sonoff_Zigbee_3.0_USB_Dongle_Plus_c42fe52d18f9ef11aeec6f135c2a50c9-if00-port0
            type: CharDevice
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: automation
  labels:
    app: zigbee2mqtt
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: zigbee2mqtt
